# pvr.epgstation

./: .gitattributes  .gitignore  .gitmodules  CNAME  ChangeLog.txt  Makefile.am  README.ja.md  README.md  addons.xml  addons.xml.md5  build.ps1  configure.ac  update_version.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  push.yml  release.yml
VS2019/: pvr.epgstation.sln
VS2019/chinachu/: chinachu.vcxproj  chinachu.vcxproj.filters
VS2019/epgstation/: epgstation.vcxproj  epgstation.vcxproj.filters
VS2019/pvr_client/: pvr_client.rc  pvr_client.vcxproj
include/epgstation/: genre.h  types.h
jni/: Android.mk  Application.mk  pack.sh
pvr.epgstation/: addon.xml  pvr.epgstation-0.0.1.zip.md5  pvr.epgstation-0.0.2.zip.md5  pvr.epgstation-0.0.3.zip.md5  pvr.epgstation-0.0.4.zip.md5  pvr.epgstation-0.0.5.zip.md5  pvr.epgstation-0.0.6.zip.md5  pvr.epgstation-0.0.7.zip.md5  pvr.epgstation-0.0.8.zip.md5  pvr.epgstation-0.0.9.zip.md5
repository.harekaze2/: repository.harekaze2-1.0.0.zip.md5
src/: Makefile.am
src/epgstation/: Makefile.am  api.cpp  api.h  channels.cpp  channels.h  docs.cpp  docs.h  epgstation.h  recorded.cpp  recorded.h  recording.cpp  recording.h  reserves.cpp  reserves.h  rules.cpp  rules.h  schedule.cpp  schedule.h  storage.cpp  storage.h
src/pvr_client/: Makefile.am  channel.cpp  demux.cpp  information.cpp  initialize.cpp  live.cpp  recording.cpp  stream.cpp  timer.cpp
template/pvr.epgstation/: addon.xml
template/pvr.epgstation/resources/: settings.xml
template/pvr.epgstation/resources/language/English/: strings.po
template/pvr.epgstation/resources/language/Japanese/: strings.po
template/repository.harekaze2/: addon.xml
